# itv_hub

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  linter.yml  tests.yml
airflow/dag/: requirements.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  src-cli-script.py
iac/: README.md
iac/dl-dwh/: main.tf  variable.tf
iac/vm-instance/: main.tf  variable.tf
source/data_generator/: data_generator.py
source/data_generator/data_source_file/: videoplay.json
source/project_script/: __init__.py  max_video_play.py
tests/: test_output.py
