[metadata]
name = src
version = 1.0.0
description = This package contains code on ITV Hub programme launch
url = https://github.com/AdenijiMujeeb/itv_hub
author = Mujeeb Adeniji
author_email = adenijimujeeb@gmail.com

[options]
packages = find:

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    src-cli = src.main:main
