[metadata]
name = project_script
version = 1.0.0
description = This package contains code on ITV hub programme launch assessment
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/AdenijiMujeeb/itv_hub
author = Mujeeb Adeniji
author_email = adenijimujeeb@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    project_script
install_requires =
    pyarrow
    requests>=2
python_requires = >=3.7
package_dir =
    =source
zip_safe = no

[options.entry_points]
console_scripts =
    max-video-cli = project_script.max_video_play:max_num_videos_playing_together

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
project_script = py.typed
